--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -237,7 +237,7 @@ const success = url.searchParams.get('success');
     <FairSupport locale={locale} content={content.fairSupport} />
 
     <!-- Instagram Gallery Section -->
-    <InstaGrid items={content.instagram} />
+        <InstaGrid instagram={content.instagram} />
 
 
   </main>
